// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Projects Page check sorting of project name is missing 1`] = `
<div>
  <div>
    <div
      class="appContainer"
    >
      <div
        class="sidebar"
      >
        <div
          class="logoContainer"
        >
          <svg
            class="logo"
            style="width: 72px; display: block;"
          />
        </div>
        <nav
          class="sidebarNavigation"
        >
          <a
            class="sidebarLink"
            href="/"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1303 MuiSvgIcon-colorPrimary-1304"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
              />
            </svg>
            Home
          </a>
          <a
            class="sidebarLink"
            href="/training"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1303 MuiSvgIcon-colorPrimary-1304"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
              />
            </svg>
            Training
          </a>
          <a
            class="sidebarLink"
            href="/faq"
          >
            <svg
              color="primary"
              style="font-size: 24px;"
            />
            FAQ
          </a>
        </nav>
      </div>
      <div
        class="appMain"
      >
        <div
          class="headerContainer"
        >
          <div
            class="header"
          >
            <div
              class="upperHeader"
            >
              <nav>
                <a
                  href="/contact"
                >
                  Contact
                </a>
                <a
                  data-testid="global-external-link"
                  href="https://www.bmigroup.com/no/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  BMI Norway Website
                </a>
              </nav>
            </div>
            <div
              class="midHeader"
            >
              <svg
                class="logo"
                style="width: 50px; display: block;"
              />
              <div
                class="midHeaderNav"
              >
                <button
                  aria-label="aria.notifications"
                  class="MuiButtonBase-root-1320 MuiIconButton-root-1312 notificationsIcon notificationsIcon--unread"
                  id="notifications-panel-toggle"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-1319"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1303 MuiSvgIcon-colorPrimary-1304 MuiSvgIcon-fontSizeLarge-1311"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-1620"
                  />
                </button>
                <div
                  class="tabletNavButton"
                >
                  <button
                    aria-label="aria.navigation"
                    class="MuiButtonBase-root-1320"
                    id="tablet-navigation-panel-toggle"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1303 MuiSvgIcon-colorPrimary-1304 MuiSvgIcon-fontSizeLarge-1311"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root-1620"
                    />
                  </button>
                </div>
                <div
                  class="mobileNavButton"
                >
                  <button
                    aria-label="aria.navigation"
                    class="MuiButtonBase-root-1320"
                    id="mobile-navigation-panel-toggle"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1303 MuiSvgIcon-colorPrimary-1304 MuiSvgIcon-fontSizeLarge-1311"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root-1620"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="lowerHeader"
            >
              <div
                class="lowerHeaderMeta"
              >
                <h3
                  class="MuiTypography-root-1329 Typography-root-1321 MuiTypography-h3-1336"
                  data-testid="typography"
                >
                  Projects
                </h3>
                <hr
                  class="MuiDivider-root-1359 lowerHeaderDivider MuiDivider-flexItem-1365 MuiDivider-vertical-1364"
                />
                <h3
                  class="MuiTypography-root-1329 lowerHeaderUserLevel Typography-root-1321 MuiTypography-h3-1336"
                  data-testid="typography"
                />
              </div>
              <div
                class="lowerHeaderNav"
              >
                <button
                  class="MuiButtonBase-root-1320 MuiIconButton-root-1312 notificationsIcon notificationsIcon--unread"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-1319"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1303 MuiSvgIcon-colorPrimary-1304"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-1620"
                  />
                </button>
                <div
                  class="makeStyles-root-1366"
                >
                  <div>
                    <button
                      aria-haspopup="true"
                      class="MuiButtonBase-root-1320 MuiButton-root-1368 MuiButton-text-1370"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-1369"
                      >
                        <div
                          class="userMenu"
                        >
                          <div
                            class="avatar"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-1303"
                              focusable="false"
                              style="width: 20px; color: rgb(238, 238, 238);"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                              />
                            </svg>
                          </div>
                          <div
                            class="userName"
                          >
                            Account
                          </div>
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-1303 MuiSvgIcon-colorAction-1306"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        class="MuiTouchRipple-root-1620"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="appContent"
        >
          <div
            class="sidePanelWrapper"
          >
            <div
              class="main"
            >
              <div
                class="sidePanel"
              >
                <div
                  class="filters"
                >
                  <nav>
                    <div
                      class="MuiFormControl-root-1412 MuiTextField-root-1411 TextField-root-1408 TextField-leftAdornment-1409 MuiFormControl-fullWidth-1415"
                    >
                      <label
                        class="MuiFormLabel-root-1424 MuiInputLabel-root-1416 MuiInputLabel-formControl-1418 MuiInputLabel-animated-1421 MuiInputLabel-outlined-1423"
                        data-shrink="false"
                        for="filter"
                        id="filter-label"
                      >
                        search.inputLabel
                      </label>
                      <div
                        class="MuiInputBase-root-1440 MuiOutlinedInput-root-1428 MuiInputBase-fullWidth-1447 MuiInputBase-formControl-1441 MuiInputBase-adornedEnd-1443 MuiOutlinedInput-adornedEnd-1431"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input-1448 MuiOutlinedInput-input-1435 MuiInputBase-inputAdornedEnd-1453 MuiOutlinedInput-inputAdornedEnd-1439"
                          id="filter"
                          name="filter"
                          type="text"
                          value=""
                        />
                        <div
                          class="MuiInputAdornment-root-1455 MuiInputAdornment-positionEnd-1458"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-1303"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                            />
                          </svg>
                        </div>
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-1462 MuiOutlinedInput-notchedOutline-1434"
                        >
                          <legend
                            class="PrivateNotchedOutline-legendLabelled-1464"
                          >
                            <span>
                              search.inputLabel
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </nav>
                  <div
                    class="filterButtons"
                  >
                    <span>
                      Show me
                      :
                    </span>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-1320 MuiChip-root-1469 Chip-root-1466 MuiChip-colorPrimary-1471 MuiChip-clickableColorPrimary-1474 MuiChip-clickable-1473"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-1490"
                        >
                          filters.labels.ALL
                        </span>
                        <span
                          class="MuiTouchRipple-root-1620"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-1320 MuiChip-root-1469 Chip-root-1466 Chip-default-1467 MuiChip-clickable-1473"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-1490"
                        >
                          filters.labels.NOT_STARTED
                        </span>
                        <span
                          class="MuiTouchRipple-root-1620"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-1320 MuiChip-root-1469 Chip-root-1466 Chip-default-1467 MuiChip-clickable-1473"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-1490"
                        >
                          filters.labels.IN_PROGRESS
                        </span>
                        <span
                          class="MuiTouchRipple-root-1620"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-1320 MuiChip-root-1469 Chip-root-1466 Chip-default-1467 MuiChip-clickable-1473"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-1490"
                        >
                          filters.labels.COMPLETED
                        </span>
                        <span
                          class="MuiTouchRipple-root-1620"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-1320 MuiChip-root-1469 Chip-root-1466 Chip-default-1467 MuiChip-clickable-1473"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-1490"
                        >
                          filters.labels.FLAT
                        </span>
                        <span
                          class="MuiTouchRipple-root-1620"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-1320 MuiChip-root-1469 Chip-root-1466 Chip-default-1467 MuiChip-clickable-1473"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-1490"
                        >
                          filters.labels.PITCHED
                        </span>
                        <span
                          class="MuiTouchRipple-root-1620"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="results"
                >
                  <div
                    data-testid="projectCard"
                  >
                    <button
                      class="MuiButtonBase-root-1320 MuiCardActionArea-root-1498"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="MuiCardContent-root-1500 main"
                      >
                        <h6
                          class="MuiTypography-root-1329 title Typography-root-1321 MuiTypography-h6-1339"
                          data-testid="typography"
                        >
                          Project 1
                        </h6>
                        <div>
                          <p
                            class="MuiTypography-root-1329 Typography-root-1321 MuiTypography-body1-1331"
                            data-testid="typography"
                          >
                            12345
                          </p>
                          <p
                            class="MuiTypography-root-1329 Typography-root-1321 MuiTypography-body1-1331"
                            data-testid="typography"
                            style="display: flex;"
                          >
                            <svg
                              class="technologyIcon"
                            />
                            filters.labels.IN_PROGRESS
                          </p>
                        </div>
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root-1303 chevron MuiSvgIcon-colorDisabled-1308"
                          focusable="false"
                          style="font-size: 36px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                          />
                        </svg>
                      </div>
                      <span
                        class="MuiCardActionArea-focusHighlight-1499"
                      />
                      <span
                        class="MuiTouchRipple-root-1620"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="footerBtn"
                >
                  <div
                    class="sidePanelFooter"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-1503 outerGrid MuiGrid-container-1504 MuiGrid-spacing-xs-3-1528"
            >
              <div
                class="MuiGrid-root-1503 Grid-item-1501 MuiGrid-item-1505 MuiGrid-grid-xs-12-1549"
              >
                <div
                  class="main"
                >
                  <h4
                    class="MuiTypography-root-1329 Typography-root-1321 Typography-underline-1323 MuiTypography-h4-1337"
                    data-testid="typography"
                  >
                    noProjects.title
                  </h4>
                  <div
                    class="body"
                  >
                    <h6
                      class="MuiTypography-root-1329 Typography-root-1321 MuiTypography-subtitle2-1341"
                      data-testid="typography"
                    >
                      noProjects.body1
                    </h6>
                    <h6
                      class="MuiTypography-root-1329 Typography-root-1321 MuiTypography-subtitle2-1341"
                      data-testid="typography"
                    >
                      noProjects.body2
                    </h6>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="footer"
        >
          <svg
            style="width: 50px;"
          />
          <nav
            class="footerNav"
          >
            <a
              href="/footer/link/relativePath"
            >
              Footer link title
            </a>
          </nav>
          <svg
            style="width: 120px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Projects Page render correctly 1`] = `
<div>
  <div>
    <div
      class="appContainer"
    >
      <div
        class="sidebar"
      >
        <div
          class="logoContainer"
        >
          <svg
            class="logo"
            style="width: 72px; display: block;"
          />
        </div>
        <nav
          class="sidebarNavigation"
        >
          <a
            class="sidebarLink"
            href="/"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1 MuiSvgIcon-colorPrimary-2"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
              />
            </svg>
            Home
          </a>
          <a
            class="sidebarLink"
            href="/training"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1 MuiSvgIcon-colorPrimary-2"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
              />
            </svg>
            Training
          </a>
          <a
            class="sidebarLink"
            href="/faq"
          >
            <svg
              color="primary"
              style="font-size: 24px;"
            />
            FAQ
          </a>
        </nav>
      </div>
      <div
        class="appMain"
      >
        <div
          class="headerContainer"
        >
          <div
            class="header"
          >
            <div
              class="upperHeader"
            >
              <nav>
                <a
                  href="/contact"
                >
                  Contact
                </a>
                <a
                  data-testid="global-external-link"
                  href="https://www.bmigroup.com/no/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  BMI Norway Website
                </a>
              </nav>
            </div>
            <div
              class="midHeader"
            >
              <svg
                class="logo"
                style="width: 50px; display: block;"
              />
              <div
                class="midHeaderNav"
              >
                <button
                  aria-label="aria.notifications"
                  class="MuiButtonBase-root-18 MuiIconButton-root-10 notificationsIcon notificationsIcon--unread"
                  id="notifications-panel-toggle"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-17"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1 MuiSvgIcon-colorPrimary-2 MuiSvgIcon-fontSizeLarge-9"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-318"
                  />
                </button>
                <div
                  class="tabletNavButton"
                >
                  <button
                    aria-label="aria.navigation"
                    class="MuiButtonBase-root-18"
                    id="tablet-navigation-panel-toggle"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1 MuiSvgIcon-colorPrimary-2 MuiSvgIcon-fontSizeLarge-9"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root-318"
                    />
                  </button>
                </div>
                <div
                  class="mobileNavButton"
                >
                  <button
                    aria-label="aria.navigation"
                    class="MuiButtonBase-root-18"
                    id="mobile-navigation-panel-toggle"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1 MuiSvgIcon-colorPrimary-2 MuiSvgIcon-fontSizeLarge-9"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root-318"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="lowerHeader"
            >
              <div
                class="lowerHeaderMeta"
              >
                <h3
                  class="MuiTypography-root-27 Typography-root-19 MuiTypography-h3-34"
                  data-testid="typography"
                >
                  Projects
                </h3>
                <hr
                  class="MuiDivider-root-57 lowerHeaderDivider MuiDivider-flexItem-63 MuiDivider-vertical-62"
                />
                <h3
                  class="MuiTypography-root-27 lowerHeaderUserLevel Typography-root-19 MuiTypography-h3-34"
                  data-testid="typography"
                />
              </div>
              <div
                class="lowerHeaderNav"
              >
                <button
                  class="MuiButtonBase-root-18 MuiIconButton-root-10 notificationsIcon notificationsIcon--unread"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-17"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1 MuiSvgIcon-colorPrimary-2"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-318"
                  />
                </button>
                <div
                  class="makeStyles-root-64"
                >
                  <div>
                    <button
                      aria-haspopup="true"
                      class="MuiButtonBase-root-18 MuiButton-root-66 MuiButton-text-68"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-67"
                      >
                        <div
                          class="userMenu"
                        >
                          <div
                            class="avatar"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-1"
                              focusable="false"
                              style="width: 20px; color: rgb(238, 238, 238);"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                              />
                            </svg>
                          </div>
                          <div
                            class="userName"
                          >
                            Account
                          </div>
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-1 MuiSvgIcon-colorAction-4"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        class="MuiTouchRipple-root-318"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="appContent"
        >
          <div
            class="sidePanelWrapper"
          >
            <div
              class="main"
            >
              <div
                class="sidePanel"
              >
                <div
                  class="filters"
                >
                  <nav>
                    <div
                      class="MuiFormControl-root-110 MuiTextField-root-109 TextField-root-106 TextField-leftAdornment-107 MuiFormControl-fullWidth-113"
                    >
                      <label
                        class="MuiFormLabel-root-122 MuiInputLabel-root-114 MuiInputLabel-formControl-116 MuiInputLabel-animated-119 MuiInputLabel-outlined-121"
                        data-shrink="false"
                        for="filter"
                        id="filter-label"
                      >
                        search.inputLabel
                      </label>
                      <div
                        class="MuiInputBase-root-138 MuiOutlinedInput-root-126 MuiInputBase-fullWidth-145 MuiInputBase-formControl-139 MuiInputBase-adornedEnd-141 MuiOutlinedInput-adornedEnd-129"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input-146 MuiOutlinedInput-input-133 MuiInputBase-inputAdornedEnd-151 MuiOutlinedInput-inputAdornedEnd-137"
                          id="filter"
                          name="filter"
                          type="text"
                          value=""
                        />
                        <div
                          class="MuiInputAdornment-root-153 MuiInputAdornment-positionEnd-156"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-1"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                            />
                          </svg>
                        </div>
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-160 MuiOutlinedInput-notchedOutline-132"
                        >
                          <legend
                            class="PrivateNotchedOutline-legendLabelled-162"
                          >
                            <span>
                              search.inputLabel
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </nav>
                  <div
                    class="filterButtons"
                  >
                    <span>
                      Show me
                      :
                    </span>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-18 MuiChip-root-167 Chip-root-164 MuiChip-colorPrimary-169 MuiChip-clickableColorPrimary-172 MuiChip-clickable-171"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-188"
                        >
                          filters.labels.ALL
                        </span>
                        <span
                          class="MuiTouchRipple-root-318"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-18 MuiChip-root-167 Chip-root-164 Chip-default-165 MuiChip-clickable-171"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-188"
                        >
                          filters.labels.NOT_STARTED
                        </span>
                        <span
                          class="MuiTouchRipple-root-318"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-18 MuiChip-root-167 Chip-root-164 Chip-default-165 MuiChip-clickable-171"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-188"
                        >
                          filters.labels.IN_PROGRESS
                        </span>
                        <span
                          class="MuiTouchRipple-root-318"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-18 MuiChip-root-167 Chip-root-164 Chip-default-165 MuiChip-clickable-171"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-188"
                        >
                          filters.labels.COMPLETED
                        </span>
                        <span
                          class="MuiTouchRipple-root-318"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-18 MuiChip-root-167 Chip-root-164 Chip-default-165 MuiChip-clickable-171"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-188"
                        >
                          filters.labels.FLAT
                        </span>
                        <span
                          class="MuiTouchRipple-root-318"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-18 MuiChip-root-167 Chip-root-164 Chip-default-165 MuiChip-clickable-171"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-188"
                        >
                          filters.labels.PITCHED
                        </span>
                        <span
                          class="MuiTouchRipple-root-318"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="results"
                >
                  <div
                    data-testid="projectCard"
                  >
                    <button
                      class="MuiButtonBase-root-18 MuiCardActionArea-root-196"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="MuiCardContent-root-198 main"
                      >
                        <h6
                          class="MuiTypography-root-27 title Typography-root-19 MuiTypography-h6-37"
                          data-testid="typography"
                        >
                          Project 1
                        </h6>
                        <div>
                          <p
                            class="MuiTypography-root-27 Typography-root-19 MuiTypography-body1-29"
                            data-testid="typography"
                          >
                            12345
                          </p>
                          <p
                            class="MuiTypography-root-27 Typography-root-19 MuiTypography-body1-29"
                            data-testid="typography"
                            style="display: flex;"
                          >
                            <svg
                              class="technologyIcon"
                            />
                            filters.labels.IN_PROGRESS
                          </p>
                        </div>
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root-1 chevron MuiSvgIcon-colorDisabled-6"
                          focusable="false"
                          style="font-size: 36px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                          />
                        </svg>
                      </div>
                      <span
                        class="MuiCardActionArea-focusHighlight-197"
                      />
                      <span
                        class="MuiTouchRipple-root-318"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="footerBtn"
                >
                  <div
                    class="sidePanelFooter"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-201 outerGrid MuiGrid-container-202 MuiGrid-spacing-xs-3-226"
            >
              <div
                class="MuiGrid-root-201 Grid-item-199 MuiGrid-item-203 MuiGrid-grid-xs-12-247"
              >
                <div
                  class="main"
                >
                  <h4
                    class="MuiTypography-root-27 Typography-root-19 Typography-underline-21 MuiTypography-h4-35"
                    data-testid="typography"
                  >
                    noProjects.title
                  </h4>
                  <div
                    class="body"
                  >
                    <h6
                      class="MuiTypography-root-27 Typography-root-19 MuiTypography-subtitle2-39"
                      data-testid="typography"
                    >
                      noProjects.body1
                    </h6>
                    <h6
                      class="MuiTypography-root-27 Typography-root-19 MuiTypography-subtitle2-39"
                      data-testid="typography"
                    >
                      noProjects.body2
                    </h6>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="footer"
        >
          <svg
            style="width: 50px;"
          />
          <nav
            class="footerNav"
          >
            <a
              href="/footer/link/relativePath"
            >
              Footer link title
            </a>
          </nav>
          <svg
            style="width: 120px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Projects Page sort project with non super admin 1`] = `
<div>
  <div>
    <div
      class="appContainer"
    >
      <div
        class="sidebar"
      >
        <div
          class="logoContainer"
        >
          <svg
            class="logo"
            style="width: 72px; display: block;"
          />
        </div>
        <nav
          class="sidebarNavigation"
        >
          <a
            class="sidebarLink"
            href="/"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1630 MuiSvgIcon-colorPrimary-1631"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
              />
            </svg>
            Home
          </a>
          <a
            class="sidebarLink"
            href="/training"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1630 MuiSvgIcon-colorPrimary-1631"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
              />
            </svg>
            Training
          </a>
          <a
            class="sidebarLink"
            href="/faq"
          >
            <svg
              color="primary"
              style="font-size: 24px;"
            />
            FAQ
          </a>
        </nav>
      </div>
      <div
        class="appMain"
      >
        <div
          class="headerContainer"
        >
          <div
            class="header"
          >
            <div
              class="upperHeader"
            >
              <nav>
                <a
                  href="/contact"
                >
                  Contact
                </a>
                <a
                  data-testid="global-external-link"
                  href="https://www.bmigroup.com/no/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  BMI Norway Website
                </a>
              </nav>
            </div>
            <div
              class="midHeader"
            >
              <svg
                class="logo"
                style="width: 50px; display: block;"
              />
              <div
                class="midHeaderNav"
              >
                <button
                  aria-label="aria.notifications"
                  class="MuiButtonBase-root-1647 MuiIconButton-root-1639 notificationsIcon notificationsIcon--unread"
                  id="notifications-panel-toggle"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-1646"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1630 MuiSvgIcon-colorPrimary-1631 MuiSvgIcon-fontSizeLarge-1638"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-1947"
                  />
                </button>
                <div
                  class="tabletNavButton"
                >
                  <button
                    aria-label="aria.navigation"
                    class="MuiButtonBase-root-1647"
                    id="tablet-navigation-panel-toggle"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1630 MuiSvgIcon-colorPrimary-1631 MuiSvgIcon-fontSizeLarge-1638"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root-1947"
                    />
                  </button>
                </div>
                <div
                  class="mobileNavButton"
                >
                  <button
                    aria-label="aria.navigation"
                    class="MuiButtonBase-root-1647"
                    id="mobile-navigation-panel-toggle"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1630 MuiSvgIcon-colorPrimary-1631 MuiSvgIcon-fontSizeLarge-1638"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root-1947"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="lowerHeader"
            >
              <div
                class="lowerHeaderMeta"
              >
                <h3
                  class="MuiTypography-root-1656 Typography-root-1648 MuiTypography-h3-1663"
                  data-testid="typography"
                >
                  Projects
                </h3>
                <hr
                  class="MuiDivider-root-1686 lowerHeaderDivider MuiDivider-flexItem-1692 MuiDivider-vertical-1691"
                />
                <h3
                  class="MuiTypography-root-1656 lowerHeaderUserLevel Typography-root-1648 MuiTypography-h3-1663"
                  data-testid="typography"
                />
              </div>
              <div
                class="lowerHeaderNav"
              >
                <button
                  class="MuiButtonBase-root-1647 MuiIconButton-root-1639 notificationsIcon notificationsIcon--unread"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-1646"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1630 MuiSvgIcon-colorPrimary-1631"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-1947"
                  />
                </button>
                <div
                  class="makeStyles-root-1693"
                >
                  <div>
                    <button
                      aria-haspopup="true"
                      class="MuiButtonBase-root-1647 MuiButton-root-1695 MuiButton-text-1697"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-1696"
                      >
                        <div
                          class="userMenu"
                        >
                          <div
                            class="avatar"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-1630"
                              focusable="false"
                              style="width: 20px; color: rgb(238, 238, 238);"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                              />
                            </svg>
                          </div>
                          <div
                            class="userName"
                          >
                            Account
                          </div>
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-1630 MuiSvgIcon-colorAction-1633"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        class="MuiTouchRipple-root-1947"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="appContent"
        >
          <div
            class="sidePanelWrapper"
          >
            <div
              class="main"
            >
              <div
                class="sidePanel"
              >
                <div
                  class="filters"
                >
                  <nav>
                    <div
                      class="MuiFormControl-root-1739 MuiTextField-root-1738 TextField-root-1735 TextField-leftAdornment-1736 MuiFormControl-fullWidth-1742"
                    >
                      <label
                        class="MuiFormLabel-root-1751 MuiInputLabel-root-1743 MuiInputLabel-formControl-1745 MuiInputLabel-animated-1748 MuiInputLabel-outlined-1750"
                        data-shrink="false"
                        for="filter"
                        id="filter-label"
                      >
                        search.inputLabel
                      </label>
                      <div
                        class="MuiInputBase-root-1767 MuiOutlinedInput-root-1755 MuiInputBase-fullWidth-1774 MuiInputBase-formControl-1768 MuiInputBase-adornedEnd-1770 MuiOutlinedInput-adornedEnd-1758"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input-1775 MuiOutlinedInput-input-1762 MuiInputBase-inputAdornedEnd-1780 MuiOutlinedInput-inputAdornedEnd-1766"
                          id="filter"
                          name="filter"
                          type="text"
                          value=""
                        />
                        <div
                          class="MuiInputAdornment-root-1782 MuiInputAdornment-positionEnd-1785"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-1630"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                            />
                          </svg>
                        </div>
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-1789 MuiOutlinedInput-notchedOutline-1761"
                        >
                          <legend
                            class="PrivateNotchedOutline-legendLabelled-1791"
                          >
                            <span>
                              search.inputLabel
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </nav>
                  <div
                    class="filterButtons"
                  >
                    <span>
                      Show me
                      :
                    </span>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-1647 MuiChip-root-1796 Chip-root-1793 MuiChip-colorPrimary-1798 MuiChip-clickableColorPrimary-1801 MuiChip-clickable-1800"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-1817"
                        >
                          filters.labels.ALL
                        </span>
                        <span
                          class="MuiTouchRipple-root-1947"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-1647 MuiChip-root-1796 Chip-root-1793 Chip-default-1794 MuiChip-clickable-1800"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-1817"
                        >
                          filters.labels.NOT_STARTED
                        </span>
                        <span
                          class="MuiTouchRipple-root-1947"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-1647 MuiChip-root-1796 Chip-root-1793 Chip-default-1794 MuiChip-clickable-1800"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-1817"
                        >
                          filters.labels.IN_PROGRESS
                        </span>
                        <span
                          class="MuiTouchRipple-root-1947"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-1647 MuiChip-root-1796 Chip-root-1793 Chip-default-1794 MuiChip-clickable-1800"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-1817"
                        >
                          filters.labels.COMPLETED
                        </span>
                        <span
                          class="MuiTouchRipple-root-1947"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-1647 MuiChip-root-1796 Chip-root-1793 Chip-default-1794 MuiChip-clickable-1800"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-1817"
                        >
                          filters.labels.FLAT
                        </span>
                        <span
                          class="MuiTouchRipple-root-1947"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-1647 MuiChip-root-1796 Chip-root-1793 Chip-default-1794 MuiChip-clickable-1800"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-1817"
                        >
                          filters.labels.PITCHED
                        </span>
                        <span
                          class="MuiTouchRipple-root-1947"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="results"
                >
                  <div
                    data-testid="projectCard"
                  >
                    <button
                      class="MuiButtonBase-root-1647 MuiCardActionArea-root-1825"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="MuiCardContent-root-1827 main"
                      >
                        <h6
                          class="MuiTypography-root-1656 title Typography-root-1648 MuiTypography-h6-1666"
                          data-testid="typography"
                        >
                          Project 1
                        </h6>
                        <div>
                          <p
                            class="MuiTypography-root-1656 Typography-root-1648 MuiTypography-body1-1658"
                            data-testid="typography"
                          >
                            12345
                          </p>
                          <p
                            class="MuiTypography-root-1656 Typography-root-1648 MuiTypography-body1-1658"
                            data-testid="typography"
                            style="display: flex;"
                          >
                            <svg
                              class="technologyIcon"
                            />
                            filters.labels.IN_PROGRESS
                          </p>
                        </div>
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root-1630 chevron MuiSvgIcon-colorDisabled-1635"
                          focusable="false"
                          style="font-size: 36px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                          />
                        </svg>
                      </div>
                      <span
                        class="MuiCardActionArea-focusHighlight-1826"
                      />
                      <span
                        class="MuiTouchRipple-root-1947"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="footerBtn"
                >
                  <div
                    class="sidePanelFooter"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-1830 outerGrid MuiGrid-container-1831 MuiGrid-spacing-xs-3-1855"
            >
              <div
                class="MuiGrid-root-1830 Grid-item-1828 MuiGrid-item-1832 MuiGrid-grid-xs-12-1876"
              >
                <div
                  class="main"
                >
                  <h4
                    class="MuiTypography-root-1656 Typography-root-1648 Typography-underline-1650 MuiTypography-h4-1664"
                    data-testid="typography"
                  >
                    noProjects.title
                  </h4>
                  <div
                    class="body"
                  >
                    <h6
                      class="MuiTypography-root-1656 Typography-root-1648 MuiTypography-subtitle2-1668"
                      data-testid="typography"
                    >
                      noProjects.body1
                    </h6>
                    <h6
                      class="MuiTypography-root-1656 Typography-root-1648 MuiTypography-subtitle2-1668"
                      data-testid="typography"
                    >
                      noProjects.body2
                    </h6>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="footer"
        >
          <svg
            style="width: 50px;"
          />
          <nav
            class="footerNav"
          >
            <a
              href="/footer/link/relativePath"
            >
              Footer link title
            </a>
          </nav>
          <svg
            style="width: 120px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
